--- a/index.html
+++ b/index.html
@@ -318,17 +318,17 @@ photography, portraits, portraiture, portrait photography, bridal, wedding, baby
 		
 		<nav class="collapse navbar-collapse text-center">
 			<ul id="menu-standard-navigation" class="nav navbar-nav"><li id="menu-item-173" class="menu-item menu-item-type-custom menu-item-object-custom current-menu-item current_page_item menu-item-home menu-item-173 active"><a href="http://jasanpictures.com">Home</a></li>
-<li id="menu-item-168" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-168"><a href="meet-the-photographers/">Meet the Team</a></li>
+<li id="menu-item-168" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-168"><a href="/meet-the-photographers/">Meet the Team</a></li>
 <li id="menu-item-495" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-495 dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle js-activated">Portfolio</a>
 <ul role="menu" class=" dropdown-menu">
-	<li id="menu-item-913" class="menu-item menu-item-type-taxonomy menu-item-object-portfolio_category menu-item-913"><a href="portfolio_category/candid-wedding/">Wedding</a></li>
-	<li id="menu-item-914" class="menu-item menu-item-type-taxonomy menu-item-object-portfolio_category menu-item-914"><a href="portfolio_category/new-born-kids-photography-in-chennai/">New born/kids</a></li>
-	<li id="menu-item-915" class="menu-item menu-item-type-taxonomy menu-item-object-portfolio_category menu-item-915"><a href="portfolio_category/candid-cinematic-wedding-videos-chennai/">Candeos</a></li>
-	<li id="menu-item-916" class="menu-item menu-item-type-taxonomy menu-item-object-portfolio_category menu-item-916"><a href="portfolio_category/stage-performance-photography/">Stage/Performance</a></li>
+	<li id="menu-item-913" class="menu-item menu-item-type-taxonomy menu-item-object-portfolio_category menu-item-913"><a href="/portfolio_category/candid-wedding/">Wedding</a></li>
+	<li id="menu-item-914" class="menu-item menu-item-type-taxonomy menu-item-object-portfolio_category menu-item-914"><a href=/portfolio_categorynew-born-kids-photography-in-chennai/">New born/kids</a></li>
+	<li id="menu-item-915" class="menu-item menu-item-type-taxonomy menu-item-object-portfolio_category menu-item-915"><a href=/portfolio_categorycandid-cinematic-wedding-videos-chennai/">Candeos</a></li>
+	<li id="menu-item-916" class="menu-item menu-item-type-taxonomy menu-item-object-portfolio_category menu-item-916"><a href=/portfolio_categorystage-performance-photography/">Stage/Performance</a></li>
 </ul>
 </li>
-<li id="menu-item-487" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-487"><a href="blog/">Blog</a></li>
-<li id="menu-item-917" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-917"><a href="contact/">Contact</a></li>
+<li id="menu-item-487" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-487"><a href="/blog">Blog</a></li>
+<li id="menu-item-917" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-917"><a href="/contact/">Contact</a></li>
 </ul>		</nav>
 	
 	</div><!--/.navbar-header --> 
@@ -401,7 +401,7 @@ photography, portraits, portraiture, portrait photography, bridal, wedding, baby
 			
 		</div>
 		
-	</div><div class="light-wrapper"><div class="container inner"><div class="row"><div id="aq-block-127-3" class="aq-block aq-block-aq_ebor_text_block col-sm-12 aq-first aq-last "><div class="text-center"><h3 class="section-title">Let's make something great together</h3><p><a href="https://www.facebook.com/jasan.pictures" target="_blank" class="btn btn-large btn-green">View More Work</a> <a href="contact/" target="_blank" class="btn btn-large btn-maroon">Get In Touch</a></p>
+	</div><div class="light-wrapper"><div class="container inner"><div class="row"><div id="aq-block-127-3" class="aq-block aq-block-aq_ebor_text_block col-sm-12 aq-first aq-last "><div class="text-center"><h3 class="section-title">Let's make something great together</h3><p><a href="https://www.facebook.com/jasan.pictures" target="_blank" class="btn btn-large btn-green">View More Work</a> <a href="/contact/" target="_blank" class="btn btn-large btn-maroon">Get In Touch</a></p>
 </div><div class="divide20"></div></div></div></div></div><div class="dark-wrapper"><div class="container inner"><div class="row"><div id="aq-block-127-5" class="aq-block aq-block-aq_section_title_block col-sm-12 aq-first aq-last ">	
 		<div class="clearfix"></div>
 			<h3 class="section-title pull-left">What We Do</h3>		<div class="clearfix"></div>
