--- a/portfolio/babu-saranya/index.html
+++ b/portfolio/babu-saranya/index.html
@@ -317,9 +317,9 @@
 <li id="menu-item-495" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-has-children menu-item-495 dropdown"><a href="#" data-toggle="dropdown" class="dropdown-toggle js-activated">Portfolio</a>
 <ul role="menu" class=" dropdown-menu">
 	<li id="menu-item-913" class="menu-item menu-item-type-taxonomy menu-item-object-portfolio_category menu-item-913"><a href="/portfolio_category/candid-wedding/">Wedding</a></li>
-	<li id="menu-item-914" class="menu-item menu-item-type-taxonomy menu-item-object-portfolio_category menu-item-914"><a href=/portfolio_categorynew-born-kids-photography-in-chennai/">New born/kids</a></li>
-	<li id="menu-item-915" class="menu-item menu-item-type-taxonomy menu-item-object-portfolio_category menu-item-915"><a href=/portfolio_categorycandid-cinematic-wedding-videos-chennai/">Candeos</a></li>
-	<li id="menu-item-916" class="menu-item menu-item-type-taxonomy menu-item-object-portfolio_category menu-item-916"><a href=/portfolio_categorystage-performance-photography/">Stage/Performance</a></li>
+	<li id="menu-item-914" class="menu-item menu-item-type-taxonomy menu-item-object-portfolio_category menu-item-914"><a href="/portfolio_category/new-born-kids-photography-in-chennai/">New born/kids</a></li>
+	<li id="menu-item-915" class="menu-item menu-item-type-taxonomy menu-item-object-portfolio_category menu-item-915"><a href="/portfolio_category/candid-cinematic-wedding-videos-chennai/">Candeos</a></li>
+	<li id="menu-item-916" class="menu-item menu-item-type-taxonomy menu-item-object-portfolio_category menu-item-916"><a href="/portfolio_category/stage-performance-photography/">Stage/Performance</a></li>
 </ul>
 </li>
 <li id="menu-item-487" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-487"><a href="/blog">Blog</a></li>
