--- a/portfolio/babu-saranya/index.html
+++ b/portfolio/babu-saranya/index.html
@@ -229,7 +229,7 @@
 <link rel='shortlink' href='?p=981' />
 
 <!-- All in One SEO Pack 1.6.14.6 by Michael Torbert of Semper Fi Web Design[69,112] -->
-<link rel="canonical" href="portfolio/babu-saranya/" />
+<link rel="canonical" href="/portfolio/babu-saranya/" />
 <!-- /all in one seo pack -->
 		<script type="text/javascript">
 
@@ -384,7 +384,7 @@
 		
 	<div class="navigation pull-right">
 		<h3 class="section-title text-right">Navigation</h3>
-		<a class="btn" href="portfolio/tamil-packya/" rel="next"><i class="icon-left-open-1"></i></a>	</div>
+		<a class="btn" href="/portfolio/tamil-packya/" rel="next"><i class="icon-left-open-1"></i></a>	</div>
 	
 	<div class="clearfix"></div>
 </div>
