--- a/portfolio/bharatanatyam-stage-performance-photography-chennai/index.html
+++ b/portfolio/bharatanatyam-stage-performance-photography-chennai/index.html
@@ -232,7 +232,7 @@
 <link rel='shortlink' href='?p=903' />
 
 <!-- All in One SEO Pack 1.6.14.6 by Michael Torbert of Semper Fi Web Design[69,111] -->
-<link rel="canonical" href="portfolio/bharatanatyam-stage-performance-photography-chennai/" />
+<link rel="canonical" href="/portfolio/bharatanatyam-stage-performance-photography-chennai/" />
 <!-- /all in one seo pack -->
 		<script type="text/javascript">
 
@@ -387,7 +387,7 @@
 		
 	<div class="navigation pull-right">
 		<h3 class="section-title text-right">Navigation</h3>
-		<a class="btn" href="portfolio/wedding-cinematic-video/" rel="next"><i class="icon-left-open-1"></i></a><a class="btn" href="portfolio/tamil-packya/" rel="prev"><i class="icon-right-open-1"></i></a>	</div>
+		<a class="btn" href="/portfolio/wedding-cinematic-video/" rel="next"><i class="icon-left-open-1"></i></a><a class="btn" href="/portfolio/tamil-packya/" rel="prev"><i class="icon-right-open-1"></i></a>	</div>
 	
 	<div class="clearfix"></div>
 </div>
